package org.example.interfaces

interface IAmable {
    public abstract var salutacio: String

    public abstract fun saluda(): String
}